[package]
name = "subnet-wasm"
version = "0.1.3"
authors = ["cmdev2 <cmdev2@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
x25519-dalek = { version = "1.1.1", features = [] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
hex-literal = "0.2.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

#codegen-units = 1
#debug = false
#debug-assertions = false
#incremental = false
#lto = true
#opt-level = "z"
#panic = "abort"
#rpath = false
